--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ torch-sparse = { version = "0.6.14", source="torch"}
 torch-cluster = { version = "1.6.0", source="torch"}
 torch-spline-conv = { version = "1.2.1", source="torch"}
 torch-geometric = "^2.1.0.post1"
+notebook = "^6.4.12"
+matplotlib = "^3.6.0"
+networkx = "^2.8.6"
+tqdm = "^4.64.1"
 
 [tool.poetry.dev-dependencies]
 
