--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ notebook = "^6.4.12"
 matplotlib = "^3.6.0"
 networkx = "^2.8.6"
 tqdm = "^4.64.1"
+pandas = "^1.5.0"
 
 [tool.poetry.dev-dependencies]
 
